--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Saschahi</a>
+        <a class="navbar-brand" href="#">Devil The Feral</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.twitch.tv/Saschahi">My Stream</a>
+                    <a class="nav-link" href="https://www.twitch.tv/deviltheferal">My Stream</a>
                 </li>
             </ul>
         </div>
